--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
 rusqlite = { version = "0.32.1", optional = true }
 reqwest = { version = "0.12.12", features = ["json"] }
 serde = { version = "1.0.217", features = ["derive"] }
+tracing = "0.1.27"
+tracing-subscriber = "0.2.16"
 serde_json = "1.0.134"
 [features]
 default = []
