--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0.217", features = ["derive"] }
 tracing = "0.1.27"
 tracing-subscriber = "0.2.16"
 serde_json = "1.0.134"
+rgb = "0.8"
 [features]
 default = []
 web = ["dioxus/web"]
