--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ tracing = "0.1.27"
 tracing-subscriber = "0.2.16"
 serde_json = "1.0.134"
 rgb = "0.8"
+web-sys = "0.3"
 
 [features]
 default = []
@@ -22,8 +23,6 @@ web = ["dioxus/web"]
 desktop = ["dioxus/desktop"]
 mobile = ["dioxus/mobile"]
 server = ["dioxus/server", "rusqlite"]
-
-[profile]
 
 [profile.wasm-dev]
 inherits = "dev"
