--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ tracing-subscriber = "0.2.16"
 serde_json = "1.0.134"
 rgb = "0.8"
 web-sys = "0.3"
-
+redis = "0.22.0"
+once_cell = "1.8.0"
 [features]
 default = []
 web = ["dioxus/web"]
